kubernetes/apps/downloads/seerr/app/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.clustrs.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seerr
  annotations:
    gethomepage.dev/description: "Media requests"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "Downloads"
    gethomepage.dev/icon: "seerr"
    gethomepage.dev/name: "Seerr"
spec:
  hostnames:
    - "seerr.${DOMAIN_CLUSTER}"
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: seerr
          port: 5055
